--- a/LEM-Finance-Module-Back/Web/Properties/launchSettings.json
+++ b/LEM-Finance-Module-Back/Web/Properties/launchSettings.json
@@ -28,5 +28,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:61428/",
+      "sslPort": 44300
+    }
   }
 }
