--- a/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/package.json
+++ b/LEM-Finance-Module-Front/LaboratoryEquipmentManager-Finance-Module/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.11",
-    "@angular/cdk": "^15.2.9",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.11",
     "@angular/compiler": "^17.3.11",
     "@angular/core": "^17.3.11",
     "@angular/forms": "^17.3.11",
-    "@angular/material": "^15.2.9",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.11",
     "@angular/platform-browser-dynamic": "^17.3.11",
     "@angular/router": "^17.3.11",
@@ -25,7 +25,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "primeng": "^17.18.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.7"
   },
