Setting correct frontend url

--- a/LEM-Finance-Module-Back/Web/appsettings.Development.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.Development.json
@@ -8,8 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "FrontendUrl": "https://happy-coast-070482c1e.6.azurestaticapps.net",
+  "FrontendUrl": "http://localhost:4200",
   "Cors": {
-    "AllowedOrigins": "https://happy-coast-070482c1e.6.azurestaticapps.net"
+    "AllowedOrigins": "http://localhost:4200"
   }
 }
