--- a/LEM-Finance-Module-Back/Web/appsettings.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.json
@@ -14,8 +14,8 @@
     "Issuer": "LemApp",
     "Audience": "LemAppUsers"
   },
-  "FrontendUrl": "http://localhost:4200",
+  "FrontendUrl": "https://happy-coast-070482c1e.6.azurestaticapps.net",
   "Cors": {
-    "AllowedOrigins": "http://localhost:4200"
+    "AllowedOrigins": "https://happy-coast-070482c1e.6.azurestaticapps.net"
   }
 }
