--- a/LEM-Finance-Module-Back/Web/appsettings.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.json
@@ -14,8 +14,8 @@
     "Issuer": "LemApp",
     "Audience": "LemAppUsers"
   },
-  "FrontendUrl": "https://happy-coast-070482c1e.6.azurestaticapps.net",
+  "FrontendUrl": "https://inwentorium.dyplomy.iem.pw.edu.pl",
   "Cors": {
-    "AllowedOrigins": "https://happy-coast-070482c1e.6.azurestaticapps.net"
+    "AllowedOrigins": "https://inwentorium.dyplomy.iem.pw.edu.pl"
   }
 }
