--- a/LEM-Finance-Module-Back/Web/appsettings.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=lemProduction.db;"
+    "DefaultConnection": "Data Source=localdatabase.db;"
   },
   "Jwt": {
     "Key": "SecretKeySecretKeySecretKeySecretKey",
