--- a/LEM-Finance-Module-Back/Web/appsettings.Development.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.Development.json
@@ -8,6 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "SecretKeySecretKeySecretKeySecretKey",
+    "Issuer": "LemApp",
+    "Audience": "LemAppUsers"
+  },
   "FrontendUrl": "http://localhost:4200",
   "Cors": {
     "AllowedOrigins": "http://localhost:4200"
