Added aditional domain

--- a/LEM-Finance-Module-Back/Web/appsettings.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.json
@@ -16,6 +16,6 @@
   },
   "FrontendUrl": "https://inwentorium.dyplomy.iem.pw.edu.pl",
   "Cors": {
-    "AllowedOrigins": "https://inwentorium.dyplomy.iem.pw.edu.pl"
+    "AllowedOrigins": "https://inwentorium.dyplomy.iem.pw.edu.pl,http://localhost:8080"
   }
 }
