appsettings.json update

--- a/LEM-Finance-Module-Back/Web/appsettings.Development.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.Development.json
@@ -13,8 +13,8 @@
     "Issuer": "LemApp",
     "Audience": "LemAppUsers"
   },
-  "FrontendUrl": "http://localhost:4200",
+  "FrontendUrl": "https://inwentorium.dyplomy.iem.pw.edu.pl",
   "Cors": {
-    "AllowedOrigins": "http://localhost:4200"
+    "AllowedOrigins": "https://inwentorium.dyplomy.iem.pw.edu.pl"
   }
 }
