Changes to frontend and linking ExpensesPlanner in removing Model by ModelId

--- a/LEM-Finance-Module-Back/Web/appsettings.Development.json
+++ b/LEM-Finance-Module-Back/Web/appsettings.Development.json
@@ -13,8 +13,8 @@
     "Issuer": "LemApp",
     "Audience": "LemAppUsers"
   },
-  "FrontendUrl": "https://inwentorium.dyplomy.iem.pw.edu.pl",
+  "FrontendUrl": "http://localhost:4200",
   "Cors": {
-    "AllowedOrigins": "https://inwentorium.dyplomy.iem.pw.edu.pl"
+    "AllowedOrigins": "http://localhost:4200"
   }
 }
